app.source: fix z-index of the diagram

--- a/client/app/modules/app.source/assets/css/source.css
+++ b/client/app/modules/app.source/assets/css/source.css
@@ -56,3 +56,8 @@
 #source-layout {
     height: 100%;
 }
+
+#source .source-content {
+    z-index: 1;
+    position: relative;
+}
